syntax = "proto3";

package brand;

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.brand";

service FindBrandById {
  rpc handle (FindBrandByIdRequest) returns (FindBrandByIdResponse);
}

message FindBrandByIdRequest {
  string id = 1;
}

message FindBrandByIdResponse {
  string name = 2;
}